# fisica_computacional_I_2026-I

./: .gitignore  README.md  Tiempo_SharoonJ.py
CristianV/: prueba.txt
CristianV/CristianPython/: Database_Scattering.py  Datasets_Prueba.py  Error_Redondeo.py  EstructuraDatos.py  Grafica_Aproximacion_Taylor.py  NumerosPares_Impares.py  time_process.py  variables.py
CristianV/CristianRust/Cargo/: Cargo.toml
CristianV/CristianRust/Cargo/src/: clima_grafica1.rs  error_conteo.rs  estructura_de_datos.rs  main.rs  pares_impares.rs  stack_queue.rs  taylo_aprox.rs  tiempo_ejecucion.rs  variable.rs
CristianV/PythonCorte2/: IntegracionDelMovimiento.py
Hola/: timepy.py
Rafael_Lemus/Python/: Contador.py  Data Set.py  Error.py  Simpson.py  Taylor.py  Timer.py  Trapecio 1.py  Variables.py  hello world.py  stack y Queue.py
Rafael_Lemus/Rust_SharoonJ/: Cargo.toml
Sebastián_V/: tiempo-Ejecucion.py
Sebastián_V/Sebas-Rust/: Cargo.toml
Sebastián_V/Sebastian_Python/: Aproximacion_Taylor.py  Cuadratura de Gauss.py  Dataset_Clima_Barras.py  Datasets_clima_Puntos.py  Ejercicio Aproximación integral.py  Error_Redondeo.py  Extrapolación de Richardson.py  Pares e impares y primos.py  Stack y queue.py
SharoonJ/Numeros_Pares_Impares/: Numeros_Pares_Impares_SharoonJ.py
SharoonJ/Numeros_Pares_Impares_SharoonJ/: Cargo.toml
SharoonJ/Tiempo_Rust_SharoonJ/: Cargo.toml
juanv/: hello.py
juanv/Hola/: Cargo.toml
juanv/Numeros_Pares_Impares_JuanV/: Cargo.toml
juanv/Numeros_Pares_Impares_Juan_V/: contadorParesImpares.py
lezlyM/: Tem.rs
lezlyM/Tarea_1/: Tiempo_E.py
(+92 files in other folders)
